<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/white"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="16dp"
        app:contentInsetStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="You"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:src="@drawable/outline_settings_24" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_view"
        android:layout_width="380dp"
        android:layout_height="280dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_borderless_corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <View
            android:id="@+id/background_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:src="@drawable/vitalhub"
            app:civ_border_color="#454a52"
            app:civ_border_width="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont_semi_bold"
            android:includeFontPadding="false"
            android:text="Username"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />


        <TextView
            android:id="@+id/total_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont_semi_bold"
            android:text="Friends"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username"/>

        <TextView
            android:id="@+id/friend_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mont_semi_bold"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/total_friend"
            app:layout_constraintTop_toTopOf="@id/total_friend"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/mont_semi_bold"
            android:includeFontPadding="false"
            android:text="Description"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <Button
            android:id="@+id/profile_detail_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner_green"
            android:paddingVertical="0dp"
            android:text="Detail"
            android:textColor="@color/color_green"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_view"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_borderless_corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_view">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="179dp"
            android:fontFamily="@font/mont_semi_bold"
            android:text="History"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/history_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/history_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/graph_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_green" />

        <ImageView
            android:id="@+id/history_next_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/next_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statistic_view"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_borderless_corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_view">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/mont_semi_bold"
            android:text="Statistics"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/statistic_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/statistic_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/statistic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_green" />

        <ImageView
            android:id="@+id/statistic_next_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/next_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friend_view"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_borderless_corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistic_view">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/mont_semi_bold"
            android:text="Friends"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/friend_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/friend_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/friend_icon"
            app:tint="@color/color_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/friend_next_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/next_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:itemActiveIndicatorStyle="@null"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@color/color_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
