<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetEnd="16dp"
        app:contentInsetStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/white"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Profile"
            android:fontFamily="@font/mont_semi_bold"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Cancel"
            android:textSize="16sp"
            android:textColor="@color/color_green"
            />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Save"
            android:textSize="16sp"
            android:textColor="@color/color_green"
            />

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:src="@drawable/vitalhub"
        app:civ_border_color="#454a52"
        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/username_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:text="Username"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/username_view"
        app:layout_constraintEnd_toEndOf="@+id/username_view"
        app:layout_constraintStart_toStartOf="@id/username_view"
        app:layout_constraintTop_toTopOf="@id/username_view" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="username"
        app:layout_constraintBottom_toBottomOf="@id/username_view"
        app:layout_constraintEnd_toEndOf="@id/username_view"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/username_view"
        app:layout_constraintTop_toTopOf="@id/username_view"
        app:layout_constraintVertical_bias="0.05" />

    <View
        android:id="@+id/birthdate_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_view" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:text="Birthdate"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/birthdate_view"
        app:layout_constraintEnd_toEndOf="@+id/birthdate_view"
        app:layout_constraintStart_toStartOf="@id/birthdate_view"
        app:layout_constraintTop_toTopOf="@id/birthdate_view" />

    <EditText
        android:id="@+id/edit_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="dd/mm/yy"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/birthdate_view"
        app:layout_constraintEnd_toEndOf="@+id/birthdate_view"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="@id/birthdate_view"
        app:layout_constraintTop_toTopOf="@id/birthdate_view"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/gender_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/birthdate_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:text="Gender"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/gender_view"
        app:layout_constraintEnd_toEndOf="@+id/gender_view"
        app:layout_constraintStart_toStartOf="@id/gender_view"
        app:layout_constraintTop_toTopOf="@id/gender_view" />

    <View
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/gender_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:text="Email"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/email_view"
        app:layout_constraintEnd_toEndOf="@+id/email_view"
        app:layout_constraintStart_toStartOf="@id/email_view"
        app:layout_constraintTop_toTopOf="@id/email_view" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="Your email"
        app:layout_constraintBottom_toBottomOf="@+id/email_view"
        app:layout_constraintEnd_toEndOf="@+id/email_view"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="@id/email_view"
        app:layout_constraintTop_toTopOf="@id/email_view"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/phone_number_view"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/email_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:text="Phone"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/phone_number_view"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_view"
        app:layout_constraintStart_toStartOf="@id/phone_number_view"
        app:layout_constraintTop_toTopOf="@id/phone_number_view" />
</androidx.constraintlayout.widget.ConstraintLayout>