...
        android:gravity="center"
        android:fontFamily="@font/mont_bold"
        android:textSize="30sp"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="Login with Google"
        android:textSize="20sp"
        app:backgroundTint="@null"
        android:background="@drawable/gradient_background"
        android:fontFamily="@font/mont_semi_bold"
        android:drawableLeft="@drawable/icons8_google1"/>

...
