<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/outline_home_24"/>
    <item
        android:id="@+id/exercise"
        android:title="Exercise"
        android:icon="@drawable/baseline_fitness_center_24"/>
    <item
        android:id="@+id/competition"
        android:title="Competition"
        android:icon="@drawable/baseline_equalizer_24" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/baseline_person_pin_24"/>
</menu>